# std-metrics-calculator

./: README.md  pyproject.toml
std_metrics_calculator/: calculator.py
std_proxy_metrics_calculator/: calculator.py
